# DG_1D_AQ

./: CMakeLists.txt  Element.cpp  Element.h  Parameters.h  README.md  artery.cpp  artery.h  generate_Q.cpp  main.cpp  main.h  test.h  tools.h
Geometry/: geometry55.csv  geometry55.txt  topology55.csv  topology55.txt
SmallTree/: CMakeLists.txt  root_imp.f90
